add theme gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
 
 [submodule "themes/hello-friend-4s3ti"]
 	path = themes/hello-friend-4s3ti
-	url = https://github.com/yudiwiratama/hugo-theme-hello-4s3ti
+#	url = https://github.com/yudiwiratama/hugo-theme-hello-4s3ti
